--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Run and Jump RxJS</title>
-
-    <script src="dist/game.bundle.js"></script>
 </head>
 <body>
-
+    <canvas id="game" width="400" height="400"></canvas>
 </body>
+<script src="dist/game.bundle.js"></script>
 </html>
