--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Run and Jump RxJS</title>
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 <body>
+    <h1>Run and Jump RxJS</h1>
+    <span style="font-family: 'Press Start 2P', cursive;">&nbsp;</span>
     <canvas id="game" width="400" height="400"></canvas>
 </body>
 <script src="dist/game.bundle.js"></script>
