--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" type="image/png" href="favicon.ico">
 </head>
 <body>
-    <div class="row game-container">
-        <div class="columns large-8 large-offset-2">
+    <div class="game-container">
+        <div class="row columns large-8 large-offset-2">
             <canvas id="game"></canvas>
         </div>
     </div>
